[gd_scene load_steps=4 format=3 uid="uid://d5sc85xd8yk0"]

[ext_resource type="Script" path="res://examine.gd" id="1_ef14g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_treru"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5yyq2"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Examine" type="CanvasLayer"]
script = ExtResource("1_ef14g")

[node name="Container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 572.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 7
metadata/_edit_group_ = true

[node name="ImagePanel" type="Panel" parent="Container"]
clip_contents = true
custom_minimum_size = Vector2(204, 204)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_treru")
metadata/_edit_group_ = true

[node name="Image" type="TextureRect" parent="Container/ImagePanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 202.0
offset_bottom = 202.0

[node name="LoadImage" type="Button" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
text = "Load Image"

[node name="BMatrixLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Бінарна матриця"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BImagePanel" type="Panel" parent="Container"]
clip_contents = true
custom_minimum_size = Vector2(204, 204)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5yyq2")
metadata/_edit_group_ = true

[node name="Image" type="TextureRect" parent="Container/BImagePanel"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 202.0
offset_bottom = 202.0

[node name="Results" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Container"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 1.0
offset_right = 78.0
offset_bottom = 35.0
text = "Back
"

[connection signal="pressed" from="Container/LoadImage" to="." method="_on_load_image_pressed"]
